mx-tweak (23.04.05mx23) mx; urgency=medium

  * remove non-working plasma systray icon size function
  * new menu icons
  * Xfce panel plugin scaling

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Thu, 13 Apr 2023 20:02:01 -0400

mx-tweak (23.04.04mx23) mx; urgency=medium

  * use gsettings tool to change gtk4 theme

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 09 Apr 2023 17:20:44 -0400

mx-tweak (23.04.03mx23) mx; urgency=medium

  * adjust internal mount option

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 09 Apr 2023 10:25:18 -0400

mx-tweak (23.04.02mx23) mx; urgency=medium

  * update for bookworm polkit configuration
  * use 10-default-mx.rules for authentication override instead of 55-tweak-override.conf

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Fri, 07 Apr 2023 20:08:06 -0400

mx-tweak (23.04.01) mx; urgency=medium

  * add feature to switch docklike for tasklist

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 01 Apr 2023 19:38:04 -0400

mx-tweak (23.01.03mx21) mx; urgency=medium

  * fix backup function when .restore doesn't exist 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 21 Jan 2023 16:18:16 -0500

mx-tweak (23.01.02mx21) mx; urgency=medium

  * add fluxbox thunar actions

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 21 Jan 2023 13:44:01 -0500

mx-tweak (23.01.01mx21) mx; urgency=medium

  * add thunar split view functions

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Tue, 17 Jan 2023 22:33:21 -0500

mx-tweak (22.12.05mx21) mx; urgency=medium

  * add explainer for Xfce CSD toggle in 4.18 and up 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Thu, 15 Dec 2022 18:31:03 -0500

mx-tweak (22.12.04mx21) mx; urgency=medium

  * disable/enable kde autoenable of bluetooth adapters when bluetooth option toggled 
  * update reset-kde script

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 11 Dec 2022 12:05:32 -0500

mx-tweak (22.12.03mx21) mx; urgency=medium

  * fix lib
  * 
